Added module descriptor
Fixed warnings